--- a/web/package.json
+++ b/web/package.json
@@ -10,12 +10,24 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.16.2",
+    "axios": "^0.15.3",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.0.1",
-    "jquery": "^3.1.1",
-    "laravel-mix": "^1.0",
-    "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "node-sass": "^4.5.3",
+    "css-loader": "^0.25.0",
+    "sass-loader": "^6.0.6",
+    "element-ui": "^2.0.2",
+    "jquery": "^3.1.0",
+    "laravel-mix": "0.*",
+    "lodash": "^4.16.4",
+    "style-loader": "^0.13.1",
+    "vue": "^2.5.2",
+    "vue-loader": "^13.3.0"
+  },
+  "dependencies": {
+    "vue-codemirror": "^3.1.8",
+    "vue-quill-editor": "^2.3.3"
   }
 }
